--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,44 @@
+/* animation/keyframes */
+@keyframes shake {
+  0% {
+    transform: rotate(15deg) scale(1);
+  }
+
+  25% {
+    transform: rotate(-15deg) scale(1.3);
+  }
+
+  50% {
+    transform: rotate(15deg) scale(1.5);
+  }
+
+  75% {
+    transform: rotate(-15deg) scale(1.3);
+  }
+
+  100% {
+    transform: rotate(15deg) scale(1);
+  }
+}
+
 /* base styles */
 body {
   margin: 0;
   font-family: sans-serif;
 }
 
+/* all svgs */
 svg {
   width: 40px;
   height: 40px;
   fill: white;
 }
 
+/* all images */
 img {
   border-radius: 50%;
   width: 75px;
   height: 75px;
-}
-/* keyframes */
-@keyframes shake {
-  0% {
-    transform: rotate(15deg) scale(1);
-  }
-  25% {
-    transform: rotate(-15deg) scale(1.3);
-  }
-  50% {
-    transform: rotate(15deg) scale(1.5);
-  }
-  75% {
-    transform: rotate(-15deg) scale(1.3);
-  }
-  100% {
-    transform: rotate(15deg) scale(1);
-  }
 }
 
 /* flex containers */
@@ -48,6 +55,8 @@ nav,
   display: flex;
   align-items: center;
 }
+
+/* notifications */
 .notificationsList {
   width: 300px;
   display: none;
@@ -59,6 +68,7 @@ nav,
   top: 45px;
   right: 160px;
 }
+
 .notification {
   display: flex;
   align-items: center;
@@ -67,9 +77,11 @@ nav,
   color: rgb(0, 0, 0);
   font-size: 0.8rem;
 }
+
 .notification p {
   flex-grow: 1;
 }
+
 .notification .circle {
   width: 12px;
   height: 12px;
@@ -77,12 +89,14 @@ nav,
   margin: 0 15px;
   background-color: rgb(4, 187, 4);
 }
+
 .notification button {
   background-color: transparent;
   border: none;
   font-size: 1rem;
   cursor: pointer;
 }
+
 /* js toggle class */
 .users {
   display: none;
@@ -96,26 +110,31 @@ nav,
   box-shadow: 3px 3px 5px black;
   cursor: pointer;
 }
+
 .username {
   text-align: center;
   display: none;
   padding: 10px 0;
   border: black 1px solid;
 }
+
 /* all widgets */
 .widget {
   padding: 0 15px;
   border-bottom: 1px solid rgb(194, 194, 194);
 }
+
 .widget h2 {
   font-size: 1.1rem;
 }
+
 /* header  */
 header {
   padding: 10px;
   background-color: rgb(130, 130, 236);
   color: white;
 }
+
 header .logo {
   flex-grow: 1;
 }
@@ -128,15 +147,19 @@ header .logo {
   transition: transform 0.3s ease-in-out;
   user-select: none;
 }
+
 .bell-vector:hover {
   animation: shake 0.5s ease-out;
 }
+
 header h1 {
   font-size: 1.3rem;
 }
+
 header span {
   font-weight: 100;
 }
+
 header sup {
   font-size: 0.5rem;
 }
@@ -153,34 +176,41 @@ header sup {
   margin: 0 10px;
   transition: transform 0.3s ease-in-out;
 }
+
 #profile-avatar:hover {
   transform: scale(1.3);
 }
+
 .profile-container {
   border-left: rgb(180, 180, 180) 1px solid;
   width: 150px;
 }
+
 .profile-container p {
   font-size: 0.8rem;
 }
-/* nav */
+
+/* navigation */
 nav {
   justify-content: space-evenly;
   padding: 10px 0;
   background-color: rgb(63, 63, 116);
 }
-/* dashboard tab and alert*/
+
+/* alert*/
 .dashboard-tab h1 {
   margin-top: 0;
   height: 40px;
   padding: 1.2rem 1rem 0 1rem;
 }
+
 .dashboard-tab h1:nth-of-type(2) {
   flex-grow: 1;
   border-bottom: 1px solid rgb(194, 194, 194);
   border-left: 1px solid rgb(194, 194, 194);
   background-color: rgb(216, 216, 216);
 }
+
 #alert {
   justify-content: space-around;
   border: 1px black solid;
@@ -190,46 +220,55 @@ nav {
   color: white;
   border: none;
 }
+
 #alert h1,
 #alert p,
 #alert button {
   margin: 10px 0;
 }
+
 #close_alert {
   background-color: transparent;
   border: none;
   color: white;
 }
+
 #close_alert:hover {
   cursor: pointer;
 }
-/* traffic */
+
+/* traffic overview*/
 .traffic-nav-box h2 {
   margin-top: 25px;
   margin-bottom: 0;
 }
+
 .traffic-nav {
   justify-content: space-between;
   margin-top: 10px;
   margin-bottom: 20px;
 }
+
 .traffic-nav button {
   background-color: transparent;
   padding: 5px 10px;
   border-radius: 15px;
   border: none;
 }
+
 .traffic-nav button:hover {
   background-color: rgb(96, 155, 96);
   color: white;
 }
-/* social */
+
+/* social stats */
 .social-widget {
   border: 1px solid rgb(194, 194, 194);
   margin-bottom: 10px;
   border-radius: 5px;
   background-color: rgb(248, 248, 248);
 }
+
 .svg {
   border: 1px solid black;
   margin: 0 1rem;
@@ -238,12 +277,14 @@ nav {
   background-color: rgb(130, 130, 236);
   border: none;
 }
+
 .social-desc h1 {
   margin-top: 10px;
   margin-bottom: 0;
   font-size: 1.1rem;
   color: rgb(130, 130, 236);
 }
+
 .social-desc h3 {
   margin-top: 0;
   margin-bottom: 10px;
@@ -251,51 +292,62 @@ nav {
   font-weight: 100;
   color: rgb(124, 124, 124);
 }
-/* new member */
+
+/* new members */
 .member,
 .recent {
   text-align: center;
   border-bottom: 1px solid rgb(194, 194, 194);
   padding-top: 15px;
 }
+
 .member:last-of-type,
 .recent:last-of-type {
   border-bottom: 0;
 }
+
 .member-name,
 .recent-post {
   margin: 0;
 }
+
 .member-email {
   margin: 0;
   color: rgb(122, 122, 233);
 }
+
 .member-date,
 .recent-time {
   margin-top: 0;
 }
+
 .recent-arrow {
   visibility: hidden;
 }
-/* message and settings */
+
+/* message user and settings */
 form {
   display: flex;
   flex-direction: column;
 }
+
 textarea {
   border-radius: 5px;
   padding: 8px 0 0 15px;
 }
+
 textarea,
 input,
 select {
   background-color: rgb(248, 248, 248);
   border: 1px solid rgb(194, 194, 194);
 }
+
 textarea::placeholder,
 input::placeholder {
   color: rgb(194, 194, 194);
 }
+
 #error {
   display: none;
   align-items: center;
@@ -307,6 +359,7 @@ input::placeholder {
   margin: auto auto;
   font-size: 15px;
 }
+
 #error span {
   padding: 2px 10px;
   border-radius: 5px;
@@ -314,6 +367,7 @@ input::placeholder {
   color: white;
   font-size: 20px;
 }
+
 input,
 form button,
 select {
@@ -321,25 +375,31 @@ select {
   border-radius: 5px;
   margin-bottom: 20px;
 }
+
 form button {
   border: none;
   color: white;
 }
+
 form button {
   background-color: rgb(130, 130, 236);
 }
+
 button[type="reset"] {
   background-color: rgb(143, 143, 143);
 }
+
 .switch {
   display: inline-block;
   height: 34px;
   position: relative;
   width: 85px;
 }
+
 .switch input {
   display: none;
 }
+
 .slider {
   background-color: #ccc;
   bottom: 0;
@@ -350,6 +410,7 @@ button[type="reset"] {
   top: 0;
   transition: 0.4s;
 }
+
 .slider:before {
   background-color: #fff;
   bottom: 4px;
@@ -360,18 +421,21 @@ button[type="reset"] {
   transition: 0.4s;
   width: 26px;
 }
-input:checked + .slider {
+
+input:checked+.slider {
   background-color: rgb(130, 130, 236);
 }
 
-input:checked + .slider:before {
+input:checked+.slider:before {
   transform: translateX(50px);
 }
-input:checked + .slider::after {
+
+input:checked+.slider::after {
   color: white;
   padding-left: 10px;
   content: "ON";
 }
+
 .slider.round {
   display: flex;
   align-items: center;
@@ -381,35 +445,73 @@ input:checked + .slider::after {
 .slider.round:before {
   border-radius: 50%;
 }
+
 .emailNotification,
 .profileToPublic,
 .settings-save {
   justify-content: space-between;
 }
+
 .settings-save button {
   width: 48%;
 }
+
 /* tablet view */
 @media screen and (min-width: 768px) {
+
+  /* body */
   body {
     display: grid;
     grid-template-columns: 100px 1fr 1fr;
   }
+
+  /* svgs */
+  .svg {
+    width: 30px;
+    height: 30px;
+    margin: 0 0.5rem;
+  }
+
+  /* flex box's */
+  .traffic-nav-box,
+  .socialWidgets,
+  .member,
+  .recent,
+  .dailyTraffic-container,
+  .mobileUser-container {
+    display: flex;
+  }
+
+
+  /* header */
   header {
     grid-column: 1/4;
   }
+
+  .logo {
+    padding-left: 1rem;
+    font-size: 1.5rem;
+  }
+
+  /* navigation */
   nav {
     flex-direction: column;
     justify-content: left;
     padding: 1rem 1.5rem;
   }
+
+  nav svg {
+    margin-bottom: 1.5rem;
+  }
+
+  /* main content */
   main {
     grid-column: 2/4;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     overflow: hidden;
   }
-  /* main template area */
+
   section:nth-of-type(1),
   section:nth-of-type(2),
   section:nth-of-type(5),
@@ -419,39 +521,22 @@ input:checked + .slider::after {
   section:nth-of-type(9) {
     grid-column: 1/3;
   }
+
   section:nth-of-type(3) {
     grid-column: 1/2;
     border-right: 1px solid rgb(194, 194, 194);
   }
+
   section:nth-of-type(4) {
     grid-column: 2/3;
   }
-  /* flex */
-  .traffic-nav-box,
-  .socialWidgets,
-  .member,
-  .recent,
-  .dailyTraffic-container,
-  .mobileUser-container {
-    display: flex;
-  }
-  nav svg {
-    margin-bottom: 1.5rem;
-  }
-  /* dashboard */
-  .logo {
-    padding-left: 1rem;
-    font-size: 1.5rem;
-  }
-  #alert {
-    justify-content: space-between;
-    padding: 5px 15px;
-  }
+
   .traffic-nav-box,
   .socialWidgets {
     justify-content: space-between;
     align-items: baseline;
   }
+
   .dailyTraffic-container,
   .mobileUser-container {
     flex-direction: column;
@@ -464,73 +549,99 @@ input:checked + .slider::after {
     display: flex;
     align-items: center;
   }
+
+
+  /* social stats */
   .social-widget {
     width: 31%;
   }
-  .svg {
-    width: 30px;
-    height: 30px;
-    margin: 0 0.5rem;
-  }
+
   .social-desc h3 {
     font-size: 2.2rem;
   }
-  /*member & recent */
+
+  /* header */
+  /* alert */
+  #alert {
+    justify-content: space-between;
+    padding: 5px 15px;
+  }
+
+
+  /*new member & recent activity */
   .member,
   .recent {
     align-items: center;
     padding-bottom: 1rem;
   }
+
   .member div,
   .recent div {
     margin-right: auto;
     text-align: left;
     padding-left: 0.8rem;
   }
+
   .recent-arrow {
     visibility: visible;
     color: rgb(130, 130, 236);
     font-size: 1.5rem;
   }
+
   .recent-time {
     margin-bottom: 0;
   }
+
   /* message & user */
   .emailNotification,
   .profileToPublic {
     width: 275px;
   }
 }
+
 /* desktop view */
 @media screen and (min-width: 1024px) {
+
+  /* svgs */
+  .svg {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
+  /* social stats */
+  .social-widget {
+    width: 32%;
+  }
+
+  .social-desc {
+    width: 60%;
+  }
+
+  /* new members & recent activity */
   section:nth-of-type(6),
   section:nth-of-type(8) {
     border-right: 1px solid rgb(194, 194, 194);
     grid-column: 1/2;
   }
+
   section:nth-of-type(7),
   section:nth-of-type(9) {
     grid-column: 2/3;
   }
-  .social-widget {
-    width: 32%;
-  }
-  .svg {
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
-  .social-desc {
-    width: 60%;
-  }
-  #settings-form {
-    height: 319px;
-    justify-content: space-between;
-  }
+
   .recent-arrow {
     font-size: 1rem;
   }
+
   .recent div,
   .member div {
     font-size: 0.8rem;
   }
+
+  /* settings */
+  #settings-form {
+    height: 319px;
+    justify-content: space-between;
+  }
+
 }
